Add XPathContext.stream() and strengthen type of getValue(String, Class)